# cht_utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  _typos.toml  pyproject.toml  readme.md  ruff.toml
.github/workflows/: publish-to-pypi.yml  tests.yml
cht_utils/: __init__.py  argo.py.deprecated  colors.py  deltares_ini.py  fileio.py  fileops.py  geometry.py  geotiff_to_cog.py  interpolation.py  misc_tools.py  netcdf_to_cog.py  pli_file.py  prob_maps.py  s3.py  sftp.py  snapwave_mesh.py  tekal.py  watersheds.py  xmlkit.py  xyz_to_cog.py
cht_utils/cmaps/: white_purple_jet.txt
cht_utils/cog/: __init__.py  geotiff_to_cog.py  netcdf_to_cog.py  xyz_to_cog.py
cht_utils/colors/: GMT_globe.txt  __init__.py  colors.py  cyan_purple_jet.txt  jet.txt
cht_utils/deprecated/: argo.py.deprecated  snapwave_mesh.py.deprecated
cht_utils/fileio/: __init__.py  deltares_ini.py  json_js.py  pli_file.py  tekal.py  xml.py  yaml.py
cht_utils/fileops/: __init__.py  fileops.py
cht_utils/interpolation/: __init__.py  interpolation.py
cht_utils/maps/: __init__.py  fileops.py  flood_map.py  topobathy_map.py  utils.py
cht_utils/physics/: __init__.py  deshoal.py  disper.py  runup_vo21.py  vo21.py  waves.py
cht_utils/probabilistic/: __init__.py  prob_maps.py
cht_utils/remote/: __init__.py  s3.py  sftp.py
docs/: conf.py  getting_started.rst  index.rst
docs/api/: index.rst
docs/user_guide/: index.rst
tests/: test_cog.py  test_colors.py  test_fileio.py  test_fileops.py  test_interpolation.py  test_physics.py  test_probabilistic.py  test_remote.py
