[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cht_utils"
description = "Utility functions for the Coastal Hazards Toolkit"
readme = "README.md"
authors = [
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "geopandas",
    "shapely",
    "pyproj",
    "matplotlib",
    "pyyaml",
    "xarray",
    "rioxarray",
    "rasterio",
    "boto3",
    "paramiko",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "cht_utils.__version__" }

[tool.setuptools.packages.find]
include = ["cht_utils*"]

[tool.pytest.ini_options]
addopts = "--cov cht_utils --cov-report xml"
testpaths = ["tests"]
